@@ -7,15 +7,9 @@
       height="30"
     />
   </a>
-  <a href="https://github.com/micartey/viro/actions/workflows/maven-publish.yml" target="_blank">
+  <a href="https://github.com/micartey/viro/actions/workflows/maven-build-and-release.yml" target="_blank">
     <img
       src="https://img.shields.io/badge/actions-build-%27a147?style=for-the-badge"
-      height="30"
-    />
-  </a>
-  <a href="https://micartey.github.io/viro/docs" target="_blank">
-    <img
-      src="https://img.shields.io/badge/javadoc-reference-5272B4.svg?style=for-the-badge"
       height="30"
     />
   </a>
@@ -29,43 +23,18 @@
   <a href="https://github.com/micartey/viro/issues">Troubleshooting</a>
 </p>
 
-
 ## 📚 Introduction
 
-Viro is a Java doodle application. It is based on the [Spring](https://spring.io/) framework and uses JavaFX for rendering.
+viro is a java overlay doodle application meant to quickly draw and highlight things in screen sharings or recordings.
 
 ![](images/preview.gif)
 
-### Motivation
+### Setup
 
-This project was created in order to have an overlay doodle application which is perfectly useful for screen sharing with the combination of drawing tablets.
-
-## 🔎 Compatibility
-
-- [x] [Windows](https://www.microsoft.com/)
-- [x] [Java 8](https://github.com/AdoptOpenJDK/openjdk-jdk8u)
-
-## 💿 Installation
-
-To use viro, you must have Java installed or use the [bundled zip](https://github.com/micartey/viro/releases) available on the release tab. In case you downloaded the source and want to compile it, make sure to have `maven` installed and run:
-
-**(This step is only optional)**
-```bash
-$ mvn package -B -ntp -DskipTests=true -f pom.xml
+1. Create a `.sdk` folder
+2. Download a [javafx-sdk](https://gluonhq.com/products/javafx/) and extract it into the `.sdk` folder. 
+The resulting structure should be: `.sdk/<your-fx-sdk>/lib`
+3. Edit the Run configuration in your idea and add the following JVM flag
 ```
-
-## ⚙ Settings
-
-Viro uses [PreferenceFx](https://github.com/dlsc-software-consulting-gmbh/PreferencesFX) to store, display and load settings. You Also have the possibility to set your own keybindings.
-
-![](images/settings.png)
-
-## ⌨ Default Keybindings
-
-| Key | Action |
-| --- | --- |
-| `ALT + PAUSE` | Show |
-| `ESC` | Hide |
-| `DELETE` | Clear Canvas |
-| `STRG + Z` | Undo |
-| `STRG + Y` | Redo |
+--module-path ./.sdk/<your-fx-sdk>/lib --add-modules javafx.controls,javafx.fxml,javafx.graphics
+```
